--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npx serve dist -p $PORT"
+    "start": "serve dist -s -l tcp://0.0.0.0:${PORT:-8080}"
   },
   "dependencies": {
     "@zxing/library": "^0.21.3",
@@ -22,7 +22,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2",
-    "serve": "^14.2.5"
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
